objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>Created as part of &quot;LCCID-1167&quot;, This object holds entire exception records during transitions</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>Exception-{0000}</displayFormat>
        <label>CRM Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>