objects/Exception_Log__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional_Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>