objects/Exception_Log__c/fields/Apex_Component__c.field-meta.xml
<CustomField>
    <fullName>Apex_Component__c</fullName>
    <label>Apex Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>