objects/Exception_Log__c/fields/DebugLog__c.field-meta.xml
<CustomField>
    <fullName>DebugLog__c</fullName>
    <label>DebugLog</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>