objects/Exception_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Call In</fullName>
            </value>
            <value>
                <fullName>Call Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>