objects/Exception_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line number</label>
    <type>TextArea</type>
</CustomField>