objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exception_Type__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>StackTrace__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>